--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,108 @@ a {
 * {
   box-sizing: border-box;
 }
+
+#column {
+  display: flex;
+  min-height: 95vh;
+  max-height: 95vh;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  background-color: #fafafa;
+  min-width: 45%;
+  border-radius: 10px;
+  margin: 0 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
+  z-index: 10;
+}
+
+#__next {
+  display: flex;
+  min-height: 100vh;
+  max-height: 100vh;
+  overflow: auto;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  background-color: #fafafa;
+  font-family: system-ui;
+  width: 100%;
+}
+
+#button {
+  border-radius: 10px;
+  padding: 15px 30px;
+  margin: 0 5px;
+  font-family: system-ui;
+  font-weight: 600;
+  transition-duration: 0.6s;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1px 2px 0 rgba(0, 0, 0, 0.19);
+  font-size: x-large;
+  border: 0px;
+  color: #4caf50;
+  text-transform: capitalize;
+}
+
+#button:hover {
+  background-color: #4caf50;
+  color: white;
+  cursor: pointer;
+}
+
+#button:active {
+  transform: translateY(15px);
+}
+
+#mainH {
+  margin: 4rem 0;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 5px gray;
+}
+
+#mainDiv {
+  display: flex;
+  min-height: 100vh;
+  max-height: 100vh;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: nowrap;
+  flex-direction: column;
+}
+
+#mainDiv h3{
+  font-weight: 400;
+  font-size:1.5rem
+}
+#minCart {
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  min-width: 100%;
+  margin-bottom:10vh;
+}
+
+#minCart h3 {
+  font-size: 1.2rem;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+#minCart h6{
+    font-size: 1rem;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+@media screen and (max-width: 400px) {
+  #button {
+    font-size: small;
+    padding: 4px 8px;
+  }
+  .mainH {
+    font-size: 1.5rem;
+  }
+}
